[package]
name = "fixed32-math"
version = "0.0.19"
edition = "2024"
license = "MIT"
description = "Geometric types"
repository = "https://github.com/piot/fixed32-math-rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fixed32 = "0.0.18"
